<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.snpeff</groupId>
  <artifactId>SnpEff</artifactId>
  <version>5.0</version>
  <packaging>jar</packaging>
  <name>SnpEff</name>
  <description>Variant annotation and effect prediction package.</description>
  <url>https://pcingola.github.io/SnpEff/</url>
  <licenses>
    <license>
      <name>GNU LESSER GENERAL PUBLIC LICENSE, Version 3.0</name>
      <url>http://www.gnu.org/licenses/lgpl-3.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <developers>
    <developer>
      <id>pcingola</id>
      <name>Pablo Cingolani</name>
    </developer>
  </developers>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.8.2</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.apfloat</groupId>
      <artifactId>apfloat</artifactId>
      <version>1.10.1</version>
    </dependency>
    <dependency>
      <groupId>com.googlecode.charts4j</groupId>
      <artifactId>charts4j</artifactId>
      <version>1.3</version>
    </dependency>
    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>1.5.0</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-suite-api</artifactId>
      <version>1.8.2</version>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-suite-engine</artifactId>
      <version>1.8.2</version>
    </dependency>
    <dependency>
      <groupId>net.sf.trove4j</groupId>
      <artifactId>trove4j</artifactId>
      <version>3.0.2</version>
    </dependency>
    <dependency>
      <groupId>org.freemarker</groupId>
      <artifactId>freemarker</artifactId>
      <version>2.3.31</version>
    </dependency>
    <dependency>
      <groupId>distlib</groupId>
      <artifactId>distlib</artifactId>
      <version>0.9.1</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-math3</artifactId>
      <version>3.2</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.4</version>
    </dependency>
	<dependency>
		<groupId>commons-codec</groupId>
		<artifactId>commons-codec</artifactId>
		<version>1.10</version>
	</dependency>
    <dependency>
        <groupId>org.biojava</groupId>
        <artifactId>biojava-core</artifactId>
        <version>6.0.4</version>
    </dependency>
    <dependency>
        <groupId>org.biojava</groupId>
        <artifactId>biojava-structure</artifactId>
        <version>6.0.4</version>
    </dependency>
    <dependency>
      <groupId>com.github.samtools</groupId>
      <artifactId>htsjdk</artifactId>
      <version>2.24.1</version>
    </dependency>
 	<dependency>
	   <groupId>javax.xml.bind</groupId>
	   <artifactId>jaxb-api</artifactId>
	   <version>2.3.1</version>
	</dependency>
  </dependencies>

  <repositories>
    <repository>
      <id>maven</id>
      <name>Maven Repository</name>
      <url>https://repo1.maven.org/maven2/</url>
      <layout>default</layout>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>central</id>
      <name>Central Repository</name>
      <url>https://repo.maven.apache.org/maven2</url>
      <layout>default</layout>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>hadoop-bam</id>
      <name>Hadoop-BAM</name>
      <url>https://hadoop-bam.sourceforge.net/maven/</url>
    </repository>
    <repository>
      <id>ncimvn-public</id>
      <name>Public NIH repository</name>
      <url>https://ncimvn.nci.nih.gov/nexus/content/groups/public/</url>
    </repository>
    <repository>
      <id>typesafe</id>
      <name>Typesafe Repository</name>
      <url>https://repo.typesafe.com/typesafe/releases/</url>
    </repository>
  </repositories>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
			<release>11</release>
			<encoding>ISO-8859-1</encoding>
			<showDeprecation>true</showDeprecation>
			<showWarnings>true</showWarnings>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <encoding>ISO-8859-1</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
          <archive>
            <manifest>
              <mainClass>org.snpeff.SnpEff</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.8.1</version>
        <configuration>
          <encoding>ISO-8859-1</encoding>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
